<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_dodgeInsetEdges="bottom"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_top_bottom_margin"
        android:layout_marginBottom="@dimen/card_top_bottom_margin"
        android:layout_marginLeft="@dimen/card_left_right_margin"
        android:layout_marginRight="@dimen/card_left_right_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/content_padding">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/wifi"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/primary_text_size"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/productsans_medium"/>
            <TextView
                android:id="@+id/appVersionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="@dimen/secondary_text_size"
                android:text="Version 1"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding"
                android:textSize="@dimen/secondary_text_size"
                android:textAlignment="center"
                android:text="@string/app_description"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/card_top_bottom_margin"
        android:layout_marginBottom="@dimen/card_top_bottom_margin"
        android:layout_marginLeft="@dimen/card_left_right_margin"
        android:layout_marginRight="@dimen/card_left_right_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/content_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/developer_lib_title_text"
                android:textSize="@dimen/primary_text_size"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/productsans_medium"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25sp"
                android:layout_margin="5dp"
                app:cardElevation="0sp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/dev_profile"/>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_name"
                android:textSize="@dimen/secondary_text_size"
                android:layout_margin="5dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding"
                android:id="@+id/devEmailTextView"
                android:textAlignment="center"
                android:textSize="@dimen/secondary_text_size"
                android:layout_marginBottom="10dp"
                android:text="@string/dev_email"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/card_top_bottom_margin"
            android:layout_marginBottom="@dimen/card_top_bottom_margin"
            android:layout_marginLeft="@dimen/card_left_right_margin"
            android:layout_marginRight="@dimen/card_left_right_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/content_padding">
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="Others"
                    android:textSize="@dimen/primary_text_size"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/productsans_medium"/>
                <TextView
                    android:id="@+id/openSourceLib"
                    android:padding="10dp"
                    android:textSize="@dimen/secondary_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_source_lib_title_text"
                    android:foreground="?selectableItemBackground"/>
                <TextView
                    android:id="@+id/privacyLib"
                    android:padding="10dp"
                    android:textSize="@dimen/secondary_text_size"
                    android:foreground="?selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_title_text"/>
                <TextView
                    android:id="@+id/termCondition"
                    android:foreground="?selectableItemBackground"
                    android:padding="10dp"
                    android:textSize="@dimen/secondary_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t_and_c_title_text"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_top_bottom_margin"
            android:layout_marginBottom="@dimen/card_top_bottom_margin"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/card_left_right_margin"
            android:layout_marginRight="@dimen/card_left_right_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/content_padding">
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Credits"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/primary_text_size"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/productsans_medium"/>
                <TextView
                    android:id="@+id/credit1TextView"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/secondary_text_size"
                    android:text="@string/app_icon_strin"/>
                <TextView
                    android:id="@+id/credit2TextView"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/secondary_text_size"
                    android:layout_height="wrap_content"
                    android:text="@string/credit2line"
                    android:foreground="?selectableItemBackground"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/secondary_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_text"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>