<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DeviceInfoActivity"
    android:padding="10sp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp">
        <TextView
            android:padding="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Basic info"
            android:textColor="@android:color/white"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp">
            <TextView
                android:id="@+id/deviceHostNameTextView"
                android:text="Pramod' Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:textSize="@dimen/secondary_text_size"/>
            <ImageButton
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_outline_edit_24px"
                android:id="@+id/editHOstNameButton"
                android:padding="2sp"
                android:background="?actionBarItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="Ping this device"
            android:id="@+id/pingButton"
            android:layout_margin="5sp"
            android:layout_weight="1"
            style="@style/AppTheme.OutlineButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.OutlineButton"
            android:text="Port scan"
            android:id="@+id/portScanButton"
            android:layout_margin="5sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp">
        <TextView
            android:padding="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Network device info"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"/>
        <FrameLayout
            android:paddingRight="5sp"
            android:paddingBottom="10sp"
            android:paddingLeft="5sp"
            android:paddingTop="10sp"
            android:background="?selectableItemBackground"
            android:id="@+id/ipAddressFramelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ip_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:textSize="@dimen/secondary_text_size"/>
            <TextView
                android:id="@+id/deviceIpAddressTextView"
                android:text="@string/no_ip"
                android:textSize="@dimen/secondary_text_size"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:paddingRight="5sp"
            android:paddingBottom="10sp"
            android:paddingLeft="5sp"
            android:paddingTop="10sp"
            android:id="@+id/macAddressFramelayout"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/mac_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"

                android:textSize="@dimen/secondary_text_size"/>
            <TextView
                android:id="@+id/deviceMacAddress"
                android:text="@string/no_ip"
                android:textAllCaps="true"
                android:textSize="@dimen/secondary_text_size"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/vendorFramelayout"
            android:paddingRight="5sp"
            android:background="?selectableItemBackground"
            android:paddingBottom="10sp"
            android:paddingLeft="5sp"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/vendor_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:textSize="@dimen/secondary_text_size"/>
            <TextView
                android:id="@+id/deviceMacVendor"
                android:text="@string/empty_data"
                android:gravity="right"
                android:textSize="@dimen/secondary_text_size"
                android:textAllCaps="false"
                android:maxLines="2"
                android:layout_gravity="right|center_vertical"
                android:layout_width="200sp"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:paddingRight="5sp"
            android:paddingBottom="10sp"
            android:paddingLeft="5sp"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/address_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:textSize="@dimen/secondary_text_size"/>
            <TextView
                android:id="@+id/deviceMacVendorAddress"
                android:text="@string/empty_data"
                android:gravity="right"
                android:textSize="@dimen/secondary_text_size"
                android:textAllCaps="false"
                android:maxLines="2"
                android:layout_gravity="right|center_vertical"
                android:layout_width="200sp"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <FrameLayout
            android:paddingRight="5sp"
            android:paddingBottom="10sp"
            android:paddingLeft="5sp"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/cc_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:textSize="@dimen/secondary_text_size"/>
            <TextView
                android:id="@+id/deviceMacVendorCountry"
                android:text="@string/empty_data"
                android:gravity="right"
                android:textSize="@dimen/secondary_text_size"
                android:textAllCaps="false"
                android:maxLines="2"
                android:layout_gravity="right|center_vertical"
                android:layout_width="200sp"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>