<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".ui.YourPublicIpActivity"
    android:paddingLeft="15sp"
    android:paddingTop="10sp"
    android:paddingRight="15sp"
    android:layout_marginBottom="10sp">
    <FrameLayout
        android:background="?selectableItemBackground"
        android:paddingRight="5sp"
        android:id="@+id/ipAddressFramelayout"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:animateLayoutChanges="true"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingRight="5sp"
            android:text="@string/local_ip_title_text"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/localIPTextView"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:text="@string/no_ip"/>
    </FrameLayout>
    <FrameLayout
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:animateLayoutChanges="true"
        android:id="@+id/macAddressFramelayout"
        android:background="?selectableItemBackground"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingRight="5sp"
            android:id="@+id/publicTitleTextView"
            android:text="@string/public_ip_title_text"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/publicIPTextView"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:text="@string/no_ip" />
    </FrameLayout>


    <FrameLayout
        android:animateLayoutChanges="true"
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="ISP"
            android:paddingRight="5sp"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/ispTextView"
            android:layout_width="180sp"
            android:gravity="right"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:text="- -"
            android:layout_gravity="right"
            android:paddingLeft="5sp"/>
    </FrameLayout>

    <FrameLayout
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:animateLayoutChanges="true"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:paddingRight="5sp"
            android:layout_height="wrap_content"
            android:text="City"/>
        <TextView
            android:id="@+id/cityTextView"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:paddingLeft="5sp"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:text="- -"/>
    </FrameLayout>

    <FrameLayout
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:animateLayoutChanges="true"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="Region"
            android:paddingRight="5sp"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/regionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- -"
            android:layout_gravity="right"
            android:paddingLeft="5sp"/>
    </FrameLayout>


    <FrameLayout
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:animateLayoutChanges="true"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="Timezone"
            android:paddingRight="5sp"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/timeZoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- -"
            android:layout_gravity="right"
            android:paddingLeft="5sp"/>
    </FrameLayout>


    <FrameLayout
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="ZIP code"
            android:paddingRight="5sp"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/zipCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- -"
            android:layout_gravity="right"
            android:paddingLeft="5sp"/>
    </FrameLayout>
    <FrameLayout
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/country_title_text"
            android:paddingRight="5sp"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- -"
            android:layout_gravity="right"
            android:paddingLeft="5sp"/>
    </FrameLayout>

    <FrameLayout
        android:animateLayoutChanges="true"
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/cc_title_text"
            android:paddingRight="5sp"/>
        <TextView
            android:textSize="18sp"
            android:id="@+id/countryCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- -"
            android:layout_gravity="right"
            android:paddingLeft="5sp"/>
    </FrameLayout>
</LinearLayout>